--- a/src/pages/app/plants.astro
+++ b/src/pages/app/plants.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import AppLayout from "@/layouts/AppLayout.astro";
 import PlantsListView from "@/components/plants/PlantsListView";
 
 const initialUrl = Astro.url.toString();
 ---
 
-<Layout title="Rosliny">
+<AppLayout title="Rosliny" activeRoute="plants">
   <PlantsListView client:load initialUrl={initialUrl} />
-</Layout>
+</AppLayout>
